Se subira cambios realizados al css

--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,36 @@ a {
     line-height: 20px;
     color: var(--negro);
 }
-.header__menu--barra .header__menu--nav > li > a:hover{
-    background-color: var(--negro);
+.header__menu--barra .header__menu--nav > li > a:before{
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: var(--negro);
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transform-origin: 0 50%;
+    transform-origin: 0 50%;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+.header__menu--barra .header__menu--nav > li > a:hover, 
+.header__menu--barra .header__menu--nav > li > a:focus, 
+.header__menu--barra .header__menu--nav > li > a:active {
     color: var(--blanco);
+}
+.header__menu--barra .header__menu--nav > li > a:hover:before, 
+.header__menu--barra .header__menu--nav > li > a:focus:before, 
+.header__menu--barra .header__menu--nav > li > a:active:before {
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+    -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+    transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
 }
